@@ -7,4 +7,5 @@ python3 -c "import sys; orthographyName = open('berber-latin-alphabet/name.txt')
 python3 -c "import sys; orthographyName = open('french/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('french/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./frenchQuickTypist.html
 python3 -c "import sys; orthographyName = open('spanish/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('spanish/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./spanishQuickTypist.html
 python3 -c "import sys; orthographyName = open('maltese/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('maltese/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./malteseQuickTypist.html
+python3 -c "import sys; orthographyName = open('mehri-soqotri/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('mehri-soqotri/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./mehri-soqotriQuickTypist.html
 
